# bugsigdb-curation-tools

./: .gitignore  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
benchmarks/figure-extraction/: README.md  RESULTS.md  blind_inputs.json  manifest.json  results.json  retrieve.py  score.py
docs/: LEDGER.md  workflow.md
docs/plans/: SESSION-HANDOFF.md  de-novo-curation-research-brief.md  de-novo-curation-workflow-plan.md  ontology-integration-plan.md
paper/: bugsigdb-autocuration.qmd
schema/: bugsigdb.yaml
sources/forms/: Form_Experiment.wiki  Form_Review.wiki  Form_Signature.wiki  Form_State_fields.wiki  Form_Study.wiki  Form_Taxon.wiki
sources/help/: Help_Contents.wiki  Help_Data_Transformations.wiki  Help_Glossary.wiki  Help_How_to_add_a_Study.wiki  Help_MHT_correction.wiki  Help_Needs_review.wiki  Help_Quality_control.wiki  Help_Study_Design.wiki
sources/properties/: Property_16S_variable_region.wiki  Property_Abundance_in_Group_1.wiki  Property_Antibiotics_exclusion.wiki  Property_Authors.wiki  Property_Body_site.wiki  Property_Chao1.wiki  Property_Condition.wiki  Property_Confounders_controlled_for.wiki  Property_DOI.wiki  (+29 more)
tests/: taxonomy_test_support.py  test_cli.py  test_cli_curate.py  test_cli_eval.py  test_cli_load.py  test_cli_pmc_map.py  test_cli_supplements.py  test_cli_validate.py  test_curator_assemble.py  test_curator_evidence.py  test_curator_firewall.py  test_curator_model.py  test_curator_ner.py  test_curator_panel.py  test_curator_pipeline_designs.py  test_curator_pipeline_e2e.py  test_curator_pipeline_logging.py  test_curator_reconcile.py  test_curator_repair.py  test_curator_resolve.py  test_curator_signature.py  test_curator_stages.py  test_curator_taxonomy.py  test_curator_verify.py  test_eval_assignment.py  test_eval_gold.py  test_eval_report.py  test_eval_score.py  test_eval_smoke.py  test_eval_taxonomy.py  test_export.py  test_figbench_retrieve.py  test_figbench_score.py  test_integration.py  test_loader.py  test_obs.py  test_pmc_map.py  test_retrieval.py  test_split.py  test_supplements.py  (+7 more)
(+78 files in other folders)
