[project]
name = "bugsigdb-curation"
version = "0.1.0"
description = "LinkML schema for the BugSigDB curation data model, foundation for an automated microbial-signature curator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
bugsigdb = "bugsigdb_curation.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bugsigdb_curation"]

[tool.pytest.ini_options]
markers = [
    "network: tests that hit real network services (deselected by default)",
]
addopts = "-m 'not network'"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-httpx>=0.36.2",
]
