[project]
name = "bugsigdb-curation"
version = "0.1.0"
description = "LinkML schema for the BugSigDB curation data model, foundation for an automated microbial-signature curator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "linkml>=1.11.1",
    "litellm>=1.92.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
bugsigdb = "bugsigdb_curation.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bugsigdb_curation"]

# Map the repo-root schema (single source of truth) into package data at build
# time, without physically duplicating the file under src/. Resolved at
# runtime via importlib.resources in bugsigdb_curation.validate.default_schema_path().
[tool.hatch.build.targets.wheel.force-include]
"schema/bugsigdb.yaml" = "bugsigdb_curation/data/bugsigdb.yaml"

[tool.pytest.ini_options]
markers = [
    "network: tests that hit real network services (deselected by default)",
]
addopts = "-m 'not network'"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-httpx>=0.36.2",
]
